Fix: Innehåll flyttar inte på sig när scrollbar visas

--- a/css/reset.css
+++ b/css/reset.css
@@ -16,7 +16,6 @@ html {
 html, body {
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
 }
 
 /* Ta bort standardmarginal på vanliga blockelement */
